--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="tab-content">
+                <div class="tab-content" style="overflow: scroll;">
                     <div class="tab-panel active" id="about-tab-panel">
                         Hello! I started this page with the idea that volleyball
                         data - public data - should be avaiable to all
