--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
                     </ul>
                 </div>
                 <div class="tab-content" style="overflow: scroll;">
-                    <div class="tab-panel" id="vbdb-tab-panel">
+                    <div class="tab-panel active" id="vbdb-tab-panel">
                         Hello! I started this page with the idea that volleyball
                         data - public data - should be avaiable to all
                         those who desire to gather, hoard and use for
                         themselves. Work in progress. Enjoy!
                     </div>
                     <div class="tab-panel" id="schedule-tab-panel">
-                        Fetch a schedule
                     </div>
-                    <div class="tab-panel active" id="boxscores-tab-panel">
+                    <div class="tab-panel" id="boxscores-tab-panel">
                         <h1>Box Scores</h1>
                         <div id="box-score-output">Loading...</div>
                     
