Styles, table fetching and procesing update

--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
                     </ul>
                 </div>
                 <div class="tab-content" style="overflow: scroll;">
-                    <div class="tab-panel active" id="vbdb-tab-panel">
+                    <div class="tab-panel" id="vbdb-tab-panel">
                         Hello! I started this page with the idea that volleyball
                         data - public data - should be available to all
                         those who desire to gather, hoard and use for
                         themselves. Work in progress. Enjoy!
                     </div>
-                    <div class="tab-panel" id="teams-tab-panel">
+                    <div class="tab-panel active" id="teams-tab-panel">
+                        <h1>NCAA Teams</h1>
                         <script type="module">
                             import { fetchAndDisplayCSV } from './js/teams.js';
                             
