--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tabbed Page</title>
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet">
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
         <link rel="stylesheet" href="styles/styles.css">
@@ -26,9 +28,11 @@
                         aria-controls="live" aria-selected="false">Live</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="schedule-tab" data-bs-toggle="tab"
+                    <button class="nav-link" id="schedule-tab"
+                        data-bs-toggle="tab"
                         data-bs-target="#schedule" type="button" role="tab"
-                        aria-controls="schedule" aria-selected="false">Schedule</button>
+                        aria-controls="schedule"
+                        aria-selected="false">Schedule</button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="teams-tab" data-bs-toggle="tab"
@@ -53,7 +57,8 @@
                 <div class="tab-pane fade show active" id="vbdb" role="tabpanel"
                     aria-labelledby="vbdb-tab">
                     <h2 class="text-center">VBDB Content</h2>
-                    <p class="text-center">Welcome to VBDB! This is a project to host NCAA volleyball data openly for anyone. Enjoy!</p>
+                    <p class="text-center">Welcome to VBDB! This is a project to
+                        host NCAA volleyball data openly for anyone. Enjoy!</p>
                     <p class="text-center">Work in progress</p>
                 </div>
                 <div class="tab-pane fade" id="live" role="tabpanel"
@@ -66,7 +71,7 @@
                     aria-labelledby="schedule-tab">
                     <h2 class="text-center">Schedule Content</h2>
                     <div class="table-responsive">
-                        <table id="scheduleTable" class="table table-dark table-hover" >
+                        <!-- <table id="scheduleTable" class="table table-dark table-hover" >
                             <thead>
                                 <tr>
                                     <th>Date</th>
@@ -76,32 +81,33 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- We'll fill this with rows of data from the CSV -->
+                                We'll fill this with rows of data from the CSV
                             </tbody>
-                        </table>
+                        </table> -->
                     </div>
                 </div>
                 <div class="tab-pane fade" id="teams" role="tabpanel"
                     aria-labelledby="teams-tab">
                     <h2 class="text-center">Teams Content</h2>
                     <div class="table-responsive">
-                    <table id="teamsTable" class="table table-dark table-hover" >
-                        <thead>
-                            <tr>
-                                <th>Team</th>
-                                <th>Conference</th>
-                                <th>School URL</th>
-                                <th>Athletics URL</th>
-                                <th>State</th>
-                                <th>Year</th>
-                                <th>Division</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- We'll fill this with rows of data from the CSV -->
-                        </tbody>
-                    </table>
-                </div>
+                        <table id="teamsTable"
+                            class="table table-dark table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Team</th>
+                                    <th>Conference</th>
+                                    <th>School URL</th>
+                                    <th>Athletics URL</th>
+                                    <th>State</th>
+                                    <th>Year</th>
+                                    <th>Division</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- We'll fill this with rows of data from the CSV -->
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="tab-pane fade" id="rankings" role="tabpanel"
                     aria-labelledby="rankings-tab">
@@ -116,8 +122,9 @@
             </div>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- <script>
             // Fetch the CSV file from the GitHub raw URL
             fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/main/data/season_schedule.csv')
                 .then(response => response.text()) // Read it as plain text
@@ -142,7 +149,7 @@
                     });
                 })
                 .catch(error => console.error('Error loading CSV:', error));
-        </script>
+        </script> -->
         <script>
             // Fetch the CSV file from the GitHub raw URL
             fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/main/data/teams.csv')
