--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="schedule-tab" data-bs-toggle="tab" data-bs-target="#schedule" type="button"
-                    role="tab" aria-controls="schedule" aria-selected="false">Schedule</button>
+                    role="tab" aria-controls="schedule" aria-selected="false">Results</button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="teams-tab" data-bs-toggle="tab" data-bs-target="#teams" type="button"
@@ -70,9 +70,9 @@
                 </div>
             </div>
 
-            <!-- Schedule tab -->
+            <!-- Results tab -->
             <div class="tab-pane fade" id="schedule" role="tabpanel" aria-labelledby="schedule-tab">
-                <h2 class="text-center">Schedule Content</h2>
+                <h2 class="text-center">Results 2024</h2>
 
                 <!-- Dropdown for Searchs -->
                 <div class="container-fluid">
